apps/production/dreamwright/patch-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dreamwright-ingress
spec:
  tls:
    - hosts:
        - dreamwright.app
      secretName: dreamwright-app-tls
